# largo

./: Cargo.toml  README.md  flake.nix
clam/: Cargo.toml
clam/clam_macro/src/: emit.rs  err.rs  lib.rs  model.rs  parse.rs
clam/src/: lib.rs
crates/clam/: Cargo.toml
crates/clam/clam_macro/: Cargo.toml
crates/clam/clam_macro/src/: emit.rs  model.rs
crates/clam/src/: lib.rs
crates/largo_core/: Cargo.toml
crates/largo_core/src/: conf.rs  dependencies.rs  dirs.rs  lib.rs  vars.rs
crates/largo_core/src/dependencies/: ctan.rs  mod.rs
crates/largo_core/src/engines/: mod.rs  pdflatex.rs
crates/largo_core/src/files/: gitignore.txt  main_latex_beamer.tex  main_tex.tex  mod.rs  packages.rs
crates/merge/: Cargo.toml
crates/merge/merge_macros/: Cargo.toml
crates/merge/merge_macros/src/: lib.rs
crates/merge/src/: lib.rs
crates/typedir/src/: lib.rs
src/: biber.rs  building.rs  cli.rs  conf.rs  dependencies.rs  dirs.rs  lib.rs  main.rs  options.rs  project.rs  util.rs  vars.rs
src/engines/: mod.rs  pdflatex.rs
src/files/: gitignore.txt  main.tex  main_latex.tex  mod.rs  packages.rs  xargo.toml
typedir/: Cargo.toml
typedir/src/: lib.rs
