[workspace]
members = [ "crates/*" ]

[package]
name = "largo"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
largo_core = { path = "crates/largo_core" }
typedir = { path = "crates/typedir" }
clap = { version = "4.0", features = [ "derive" ] }
anyhow = "1.0"
smol = "1.3"
