[workspace]
members = [ "crates/*" ]

[package]
name = "largo"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
largo_core = { path = "crates/largo_core" }
typedir = { path = "crates/typedir" }
clap = { version = "4.0", features = [ "derive" ] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
termcolor = "*"
anyhow = "1.0"
heck = "0.4"
