[package]
name = "clam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clam-macro = { path = "./clam_macro" }
async-process = { version = "*", optional = true }
tokio = { version = "*", features = [ "process" ], optional = true }

[features]
default = []
async-process = [ "dep:async-process" ]
tokio = [ "dep:tokio" ]
