[package]
name = "largo_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
toml = { version = "0.5.9", features = [ "preserve_order" ] }
reqwest = { version = "0.11", features = [ "json" ] }
smol = "*"
chrono = "0.4"
itertools = "0.10"
thiserror = "1.0"
anyhow = "*"
typedir = { path = "../typedir" }
merge = { path = "../merge" }
clam = { path = "../clam", features = [ "async-process" ] }
